fix login issue, remove release info on mobile

--- a/assets/css/general/responsiveness.css
+++ b/assets/css/general/responsiveness.css
@@ -171,6 +171,10 @@
 		padding-top: 10px;
 		padding-left: 40px;
 	}
+	
+	.release-info {
+		display: none !important;
+	}
 }
 
 @media (max-width: 370px) {
